# raft-impl

./: .gitignore  CMakeLists.txt  README.md  gflags.conf  main.cpp
client/: counter_client.cpp
proto/: counter.proto  raft.proto
src/: node.cpp  node.h  peer.cpp  peer.h  state_machine.h  store.cpp  store.h  util.cpp  util.h
src/service/: counter.h  counter_service.h
